--- a/design.css
+++ b/design.css
@@ -5,7 +5,7 @@
           width: 100%;
           height: 15%;
           background-color: LightPink;
-          color: black;
+          color: green;
           display: flex;
           align-items: center;
           justify-content: space-between; /* spreads left, center, right */
