--- a/design.css
+++ b/design.css
@@ -98,3 +98,12 @@ header {
     transform: translateY(5px); 
     margin-left: 45px;
 }
+
+circle {
+  width: 100%;
+  height: 90vh; /* 90% of viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
